
5.4.33 -
  Matt Brookings
  - Defaulted to Server::Disable=True in vusagec.conf
  - Fixed bug that didn't install vusagec.conf
  - Changed relevant quota code to use storage_t 64bit type
  - Fixed bug where backfill code wouldn't compile when FILE_LOCKING was
    enabled
  - Updated MySQL module to support larger quota sizes
  - Fixed typo

  Tullio Andreatta
  - Dynamic allocation of valias data
  - Use of open/fchdir rather than getcwd/chdir to maintain current working
    directory
  - Fixed a broken symbolic link check

  Drew Wells
  - Modification to vdelivermail to properly handle Maildir paths that begin with "./"

5.4.32 - Released 11-08-2010
  Matt Brookings
  - Updated maildirsize creation to set uid/gid on target
  - Updated maildirsize_read to enforce Maildir++ specifications related
    to maildirsize filesize and maildirsize modification time.
  - Fixed returning of 0 rather than NULL in client_connect
  - Updated vusage client API not to try to connect to the daemon if
    vusagec.conf does not exist
  - Fixed quota calculation bug when delivering with vusage daemon

  aledr <matrixworkstation@gmail.com>
  - Patch to secure against possible overflows when reading ezmlm configurations

  <alessio@skye.it>
  - Patch to vpopmaild to fix return value in wait_read

5.4.31 - Released 12-10-2009
   Matt Brookings
   - Released to fix leftover issue that should have been addressed in 5.4.30

5.4.30 - Released 12-10-2009
   Matt Brookings
   - Fixed problem where variable was declared in-function
   - Duplicated a few fixes from 5.5 branch in vusaged

5.4.29 - Released 12-03-2009
   Matt Brookings
   - Numerous fixes to compile on Solaris
   - Fixed some format string issues
   - Fixed strstr being used with NULL value in vchkpw
   - Numerous fixes to compile on FreeBSD
   - Released to address some segfault issues in 5.4.28
   - Fixed bug in config API that assumes config pointer is not NULL
   - Updated client API to check Server::Disable